Source/Ancestry.QueryProcessor/Parse/Parser.cs
using System;
using System.Text;
using System.IO;
using System.Collections.Generic;

namespace Ancestry.QueryProcessor.Parse
{
	// given an arbitrary input string, return a syntactically valid DotQL parse tree
	public class Parser
	{
		/// <summary> This method allows parsing from any parse method using a string. </summary>
		public static R ParseFrom<R>(Func<Lexer, R> func, string input)
		{
			Lexer lexer = new Lexer(input);
			try
			{
				return func(lexer);
			}
			catch (Exception e)
			{
				throw new SyntaxException(lexer, e);
			}
		}

		/// <summary> If true, the parser will error if there is text following a script, such as another script. </summary>
		public bool ErrorIfNotEOF { get; set; }

		/*
			Script :=
				Usings : [ UsingClause ]*
				Modules : [ ModuleDeclaration ]*
				Vars : [ VarDeclaration ]*
				Assignments : [ Assignment ]*
				Expression : [ ClausedExpression ]
		*/
		public Script Script(Lexer lexer)
		{
			var script = new Script();
			script.SetPosition(lexer);

			while (lexer[1, false].IsSymbol(Keywords.Using))
				script.Usings.Add(Using(lexer));
			while (lexer[1, false].IsSymbol(Keywords.Module))
				script.Modules.Add(Module(lexer));
			while (lexer[1, false].IsSymbol(Keywords.Var))
				script.Vars.Add(Var(lexer));
			while (NextIsClausedSomething(lexer))
			{
				var claused = ClausedAssignmentOrExpression(lexer);
				if (claused is ClausedAssignment)
					script.Assignments.Add((ClausedAssignment)claused);
				else
				{
					script.Expression = (ClausedExpression)claused;
					break;
				}
			}

			if (ErrorIfNotEOF)
				lexer[1, false].CheckType(TokenType.EOF);

			return script;
		}

		/*
				"using" [ Alias: QualifiedIdentifier ":=" ] Target : QualifiedIdentifier Version : Version
		*/
		public Using Using(Lexer lexer)
		{
			lexer.NextToken().DebugCheckSymbol(Keywords.Using);

			var @using = new Using();
			@using.SetPosition(lexer);

			var qualifiedIdentifier = QualifiedIdentifier(lexer, true);

			if (lexer[1].IsSymbol(Keywords.Equal))
			{
				@using.Alias = qualifiedIdentifier;
				lexer.NextToken();
				qualifiedIdentifier = QualifiedIdentifier(lexer, false);
			}

			@using.Target = qualifiedIdentifier;

			lexer.NextToken().CheckType(TokenType.Version);
			@using.Version = lexer[0].AsVersion;

			return @using;
		}

        /*
                "module" Name : QualifiedIdentifier "{" Members : [ ModuleMember ]* "}"
        */
		public ModuleDeclaration Module(Lexer lexer)
        {
            lexer.NextToken().DebugCheckSymbol(Keywords.Module);

            var moduleDeclaration = new ModuleDeclaration();
            moduleDeclaration.SetPosition(lexer);

            moduleDeclaration.Name = QualifiedIdentifier(lexer, true);

			lexer.NextToken().CheckType(TokenType.Version);

			moduleDeclaration.Version = lexer[0].AsVersion;

            lexer.NextToken().CheckSymbol(Keywords.BeginTupleSet);

            while (!lexer[1].IsSymbol(Keywords.EndTupleSet))
				moduleDeclaration.Members.Add(ModuleMember(lexer));

			lexer.NextToken().CheckSymbol(Keywords.EndTupleSet);

            return moduleDeclaration;
        }

        /*
            ModuleMember =
                    TypeMember | EnumMember   | ConstMember | VarMember
                          
            TypeMember :=
                    Name : QualifiedIdentifier ":" "typedef" Type : TypeDeclaration
                          
            EnumMember :=
                    Name : QualifiedIdentifier ":" "enum" "{" Values : QualifiedIdentifier* "}"
                          
            ConstMember :=
                    Name : QualifiedIdentifier ":" "const" Expression : Expression
                          
            VarMember :=
                    Name : QualifiedIdentifier ":" Type: TypeDeclaration
        */
        public ModuleMember ModuleMember(Lexer lexer)
        {
			ModuleMember moduleMember;

			LexerToken lexerToken = lexer[1];

			var moduleMemberName = QualifiedIdentifier(lexer, true);

			lexer.NextToken().CheckSymbol(Keywords.AttributeSeparator);

			switch (lexer[1].Token)
			{
				case Keywords.TypeDef:
					lexer.NextToken();
					moduleMember = new TypeMember()
					{
						Type = TypeDeclaration(lexer)
					};
					break;
				case Keywords.Enum:
					lexer.NextToken();

					lexer.NextToken().CheckSymbol(Keywords.BeginTupleSet);

					var enumMember = new EnumMember();

					while (!lexer[1].IsSymbol(Keywords.EndTupleSet))
					{
						enumMember.Values.Add(QualifiedIdentifier(lexer, true));
					}

					lexer.NextToken().CheckSymbol(Keywords.EndTupleSet);

					moduleMember = enumMember;

					break;
				case Keywords.Const:
					lexer.NextToken();
					moduleMember = new ConstMember()
					{
						Expression = Expression(lexer)
					};
					break;
				default:
					moduleMember = new VarMember()
					{
						Type = TypeDeclaration(lexer)
					};
					break;
			}

			moduleMember.Name = moduleMemberName;
			moduleMember.SetPosition(lexerToken);

			return moduleMember;
        }

		/*
				"var" Name : qualifiedIdentifier [ ":" Type : typeDeclaration ] [ ":=" Initializer : expression )
		*/
		public VarDeclaration Var(Lexer lexer)
		{
			lexer.NextToken().DebugCheckSymbol(Keywords.Var);

			var result = new VarDeclaration();
			result.SetPosition(lexer);
			result.Name = QualifiedIdentifier(lexer, true);
			if (lexer[1, false].IsSymbol(Keywords.AttributeSeparator))
			{
				lexer.NextToken();
				result.Type = TypeDeclaration(lexer);
			}
			if (lexer[1, false].IsSymbol(Keywords.Assignment))
			{
				lexer.NextToken();
				result.Initializer = Expression(lexer);
			}
			if (result.Type == null && result.Initializer == null)
				throw new ParserException(ParserException.Codes.TypeOrInitializerExpected);
			return result;
		}

		/*
				"set" Target : expression ":=" Source : expression
		*/
		public Assignment Assignment(Lexer lexer)
		{
			lexer.NextToken().DebugCheckSymbol(Keywords.Set);

			var result = new Assignment();
			result.SetPosition(lexer);
			result.Target = Expression(lexer);
			lexer.NextToken().CheckSymbol(Keywords.Assignment);
			result.Source = Expression(lexer);
			
			return result;
		}

		/*
			OptionalType | requiredTypes
		*/
		public TypeDeclaration TypeDeclaration(Lexer lexer)
		{
			return OptionalType(lexer);
		}

		/*
				Type : requiredTypes IsRequired : ( "?" | "!" )
		*/
		public TypeDeclaration OptionalType(Lexer lexer)
		{
			var type = RequiredTypes(lexer);
			
			if (lexer[1, false].IsSymbol(Keywords.Optional) || lexer[1, false].IsSymbol(Keywords.Required))
			{
				lexer.NextToken();
				var result = new OptionalType();
				result.SetPosition(lexer);
				result.Type = type;
				result.IsRequired = lexer[0].IsSymbol(Keywords.Required);
				return result;
			}
			return type;
		}

		/*
				ListType | TupleType | SetType | FunctionType | IntervalType | NamedType | TypeOf
		*/
		public TypeDeclaration RequiredTypes(Lexer lexer)
		{
			lexer[1].CheckType(TokenType.Symbol);
			switch (lexer[1].Token)
			{
				case Keywords.BeginList: return ListType(lexer);
				case Keywords.BeginTupleSet: return SetOrTupleType(lexer);
				case Keywords.BeginGroup: return FunctionType(lexer);
				case Keywords.IntervalType: return IntervalType(lexer);
				case Keywords.TypeOf: return TypeOf(lexer);
				default: return NamedType(lexer);
			}
		}

		/*
				"[" Type : typeDeclaration "]"
		*/
		public TypeDeclaration ListType(Lexer lexer)
		{
			lexer.NextToken().DebugCheckSymbol(Keywords.BeginList);

			var result = new ListType();
			result.SetPosition(lexer);
			result.Type = TypeDeclaration(lexer);

			lexer.NextToken().CheckSymbol(Keywords.EndList);

			return result;
		}

		public TypeDeclaration SetOrTupleType(Lexer lexer)
		{
			lexer.NextToken().DebugCheckSymbol(Keywords.BeginTupleSet);

			// Check for no-attribute tuple
			if (lexer[1].IsSymbol(Keywords.AttributeSeparator) || lexer[1].IsSymbol(Keywords.Ref) || lexer[1].IsSymbol(Keywords.Key))
			{
				var result = new TupleType();
				result.SetPosition(lexer);
				TupleTypeMembers(lexer, result);
				lexer.NextToken().CheckSymbol(Keywords.EndTupleSet);
				return result;
			}
			else
			{
				// Capture the beginning token for position information
				var beginToken = lexer[0];
				var firstType = TypeDeclaration(lexer);
				if (lexer[1].IsSymbol(Keywords.AttributeSeparator))
				{
					// Treat as an attribute type

					// Validate that the first expression was nothing but an identifier (the attribute name)
					var identifier = firstType as NamedType;
					if (identifier == null)
						throw new ParserException(ParserException.Codes.InvalidAttributeName);

					lexer.NextToken();

					// Manually construct the first attribute and add it
					var attribute = new TupleAttribute();
					attribute.Name = identifier.Target;
					attribute.LineInfo = identifier.LineInfo;
					attribute.Type = TypeDeclaration(lexer);
					var result = new TupleType();
					result.SetPosition(beginToken);
					result.Attributes.Add(attribute);

					// Add remaining attributes
					if (!lexer[1, false].IsSymbol(Keywords.EndTupleSet))
						TupleTypeMembers(lexer, result);

					lexer.NextToken().CheckSymbol(Keywords.EndTupleSet);
					return result;
				}
				else
				{
					// Treat as a set selector

					// Manually add already parsed first expression
					var result = new SetType();
					result.SetPosition(beginToken);
					result.Type = firstType;

					lexer.NextToken().CheckSymbol(Keywords.EndTupleSet);
					return result;
				}
			}
		}

		/*
				( TupleAttribute | TupleReference | TupleKey )*
		*/
		public void TupleTypeMembers(Lexer lexer, TupleType result)
		{
			do
			{
				var member = TupleTypeMember(lexer);
				if (member is TupleAttribute)
					result.Attributes.Add((TupleAttribute)member);
				else if (member is TupleReference)
					result.References.Add((TupleReference)member);
				else if (member is TupleKey)
					result.Keys.Add((TupleKey)member);
				else
					break;
			} while (!lexer[1].IsSymbol(Keywords.EndTupleSet));
		}

		/*
				TupleAttribute :=
					Name : QualifiedIdentifier ":" Type : typeDeclaration

				TupleReference :=
					"ref" Name : QualifiedIdentifier "{" SourceAttributeNames : QualifiedIdentifier* "}" 
						Target : QualifiedIdentifier "{" TargetAttributeNames : QualifiedIdentifier* "}"	

				TupleKey :=
					"key" "(" AttributeNames : [ QualifiedIdentifier ]* ")"
		*/
		public Statement TupleTypeMember(Lexer lexer)
		{
			switch (lexer[1].AsSymbol)
			{
				case Keywords.AttributeSeparator:
					{
						lexer.NextToken();
						// Check for empty tuple designator
						if (lexer[1].IsSymbol(Keywords.EndTupleSet))
							return null;

						// Inferred-named attribute
						var attribute = new AttributeSelector();
						attribute.SetPosition(lexer);
						attribute.Value = Expression(lexer);
						return attribute;
					}
				case Keywords.Ref: return TupleReference(lexer);
				case Keywords.Key: return TupleKey(lexer);
				default: 
					{
						// Named attribute
						var attribute = new TupleAttribute();
						attribute.SetPosition(lexer);
						attribute.Name = QualifiedIdentifier(lexer, true);
						lexer.NextToken().CheckSymbol(Keywords.AttributeSeparator);
						attribute.Type = TypeDeclaration(lexer);
						return attribute;
					}
			}
		}

		/*
			FunctionType :=
				functionParameters "=>" [ "<" TypeParameters : typeDeclaration* ">" ] ReturnType : typeDeclaration

			functionParameters =
				"(" Parameters : [ FunctionParameter ]* ")"
		*/
		public FunctionType FunctionType(Lexer lexer)
		{
			lexer.NextToken().DebugCheckSymbol(Keywords.BeginGroup);

			var result = new FunctionType();
			result.SetPosition(lexer);

			// Parse parameters
			while (!lexer[1].IsSymbol(Keywords.EndGroup))
				result.Parameters.Add(FunctionParameter(lexer));
			lexer.NextToken().CheckSymbol(Keywords.EndGroup);

			lexer.NextToken().CheckSymbol(Keywords.Function);

			if (lexer[1].IsSymbol(Keywords.Less))
			{
				lexer.NextToken();
				while (!lexer[1].IsSymbol(Keywords.Greater))
					result.TypeParameters.Add(TypeDeclaration(lexer));
				lexer.NextToken();
			}

			result.ReturnType = TypeDeclaration(lexer);

			return result;
		}

		/*
				Name : QualifiedIdentifier ":" Type : typeDeclaration
		*/
		private FunctionParameter FunctionParameter(Lexer lexer)
		{
			var param = new FunctionParameter();
			param.SetPosition(lexer[1]);
			param.Name = QualifiedIdentifier(lexer, true);
			lexer.NextToken().CheckSymbol(Keywords.AttributeSeparator);
			param.Type = TypeDeclaration(lexer);
			return param;
		}

		/*
				"interval" Type : typeDeclaration
		*/
		public TypeDeclaration IntervalType(Lexer lexer)
		{
			lexer.NextToken().DebugCheckSymbol(Keywords.IntervalType);
			var result = new IntervalType();
			result.SetPosition(lexer[1]);
			result.Type = TypeDeclaration(lexer);
			return result;
		}

		/*
				"typeof" Expression : expression
		*/
		public TypeDeclaration TypeOf(Lexer lexer)
		{
			lexer.NextToken().DebugCheckSymbol(Keywords.TypeOf);
			var result = new TypeOf();
			result.SetPosition(lexer);
			result.Expression = Expression(lexer);
			return result;
		}

		/*
				Target : QualifiedIdentifier
		*/
		public TypeDeclaration NamedType(Lexer lexer)
		{
			var result = new NamedType();
			result.SetPosition(lexer[1]);
			result.Target = QualifiedIdentifier(lexer, false);
			return result;
		}

		public Expression Expression(Lexer lexer)
		{
			return OfExpression(lexer);
		}

		#region Expression Helpers

		protected BinaryExpression AppendToBinaryExpression(Lexer lexer, Expression expression, Func<Lexer, Expression> next)
		{
			var token = lexer.NextToken();
			var result = new BinaryExpression();
			result.SetPosition(lexer);
			result.Left = expression;
			result.Operator = BinaryKeywordToOperator(token.Token);
			result.Right = next(lexer);
			return result;
		}

		public static Operator UnaryKeywordToOperator(string keyword)
		{
			switch (keyword)
			{
				case Keywords.Exists: return Operator.Exists;
				case Keywords.Negate: return Operator.Negate;
				case Keywords.Not: return Operator.Not;
				case Keywords.BitwiseNot: return Operator.BitwiseNot;
				case Keywords.ExtractSingleton: return Operator.IsNull;
				case Keywords.Successor: return Operator.Successor;
				case Keywords.Predicessor: return Operator.Predicessor;
				default: return Operator.Unknown;
			}
		}

		public static Operator BinaryKeywordToOperator(string keyword)
		{
			switch (keyword)
			{
				case Keywords.In: return Operator.In;
				case Keywords.Or: return Operator.Or;
				case Keywords.Xor: return Operator.Xor;
				case Keywords.Like: return Operator.Like;
				case Keywords.Matches: return Operator.Matches;
				case Keywords.And: return Operator.And;
				case Keywords.Addition: return Operator.Addition;
				case Keywords.BitwiseAnd: return Operator.BitwiseAnd;
				case Keywords.BitwiseNot: return Operator.BitwiseNot;
				case Keywords.BitwiseOr: return Operator.BitwiseOr;
				case Keywords.BitwiseXor: return Operator.BitwiseXor;
				case Keywords.Compare: return Operator.Compare;
				case Keywords.Divide: return Operator.Divide;
				case Keywords.Equal: return Operator.Equal;
				case Keywords.Exists: return Operator.Exists;
				case Keywords.Greater: return Operator.Greater;
				case Keywords.InclusiveGreater: return Operator.InclusiveGreater;
				case Keywords.Modulo: return Operator.Modulo;
				case Keywords.NotEqual: return Operator.NotEqual;
				case Keywords.InclusiveLess: return Operator.InclusiveLess;
				case Keywords.Less: return Operator.Less;
				case Keywords.Multiply: return Operator.Multiply;
				case Keywords.Power: return Operator.Power;
				case Keywords.ShiftLeft: return Operator.ShiftLeft;
				case Keywords.ShiftRight: return Operator.ShiftRight;
				case Keywords.Subtract: return Operator.Subtract;
				case Keywords.IfNull: return Operator.IfNull;
				case Keywords.Dereference: return Operator.Dereference;
				case Keywords.Extract: return Operator.Extract;
				case Keywords.Embed: return Operator.Embed;
				default: return Operator.Unknown;
			}
		}

		public static bool NextIsClausedSomething(Lexer lexer)
		{
			if (lexer[1].Type == TokenType.Symbol)
				switch (lexer[1].Token)
				{
					case Keywords.For:
					case Keywords.Let:
					case Keywords.Order:
					case Keywords.Where:
					case Keywords.Return:
					case Keywords.Set:
						return true;
				}

			return false;
		}

		public static object TokenToLiteralObject(LexerToken token)
		{
			object value = null;
			switch (token.Type)
			{
				case TokenType.Symbol:
					switch (token.Token)
					{
						//case Keywords.Void: value = void;
						case Keywords.True: value = true; break;
						case Keywords.False: value = false; break;
						default: value = null; break; // case Keywords.Null:
					}
					break;
				case TokenType.Long: value = token.AsLong; break;
				case TokenType.Integer: value = token.AsInteger; break;
				case TokenType.Double: value = token.AsDouble; break;
				case TokenType.String: value = token.AsString; break;
				case TokenType.Name: var name = token.AsName; CheckValidIdentifier(name); value = name; break;
				case TokenType.Char: value = token.AsChar; break;
				//case TokenType.Date: value = token.AsDateTime;	// TODO: Create 1st class Date and Time types
				case TokenType.DateTime: value = token.AsDateTime; break;
				case TokenType.Guid: value = token.AsGuid; break;
				case TokenType.Hex: value = token.AsHex; break;
				//case TokenType.Time: value = token.AsDateTime;
				case TokenType.TimeSpan: value = token.AsTimeSpan; break;
				case TokenType.Version: value = token.AsVersion; break;
				default: throw new NotSupportedException(String.Format("Token type {0} is unsupported.", token.Type));
			}
			return value;
		}

		#endregion

		/*
			( Expression : Expression "of" Type : TypeDeclaration )
		*/
		public Expression OfExpression(Lexer lexer)
		{
			var expression = LogicalBinaryExpression(lexer);
			if (lexer[1].IsSymbol(Keywords.Of))
			{
				lexer.NextToken();
				var result = new OfExpression();
				result.SetPosition(lexer);
				result.Expression = expression;
				result.Type = TypeDeclaration(lexer);
				return result;
			}
			return expression;
		}

		/*
				Left : expression Operator : ( "in" | "or" | "xor" | "like" | "matches" | "??" ) Right : expression
		*/
		public Expression LogicalBinaryExpression(Lexer lexer)
		{
			var expression = LogicalAndExpression(lexer);

			while (lexer[1].Type == TokenType.Symbol)
			{
				switch (lexer[1].Token)
				{
					case Keywords.In:
					case Keywords.Or:
					case Keywords.Xor:
					case Keywords.Like:
					case Keywords.Matches:
					case Keywords.IfNull:
						expression = AppendToBinaryExpression(lexer, expression, LogicalAndExpression);
						break;
					default:
						return expression;
				}
			}
			return expression;
		}

		/*
				Left : expression "and" Right : expression
		*/
		public Expression LogicalAndExpression(Lexer lexer)
		{
			var expression = BitwiseBinaryExpression(lexer);

			
			while (lexer[1].IsSymbol(Keywords.And))
				expression = AppendToBinaryExpression(lexer, expression, BitwiseBinaryExpression);

			return expression;
		}

		/*
				Left : expression Operator : ( "^" | "&" | "|" | "<<" | ">>" ) Right : expression
		*/
		public Expression BitwiseBinaryExpression(Lexer lexer)
		{
			var expression = ComparisonExpression(lexer);

			while (lexer[1].Type == TokenType.Symbol)
			{
				switch (lexer[1].Token)
				{
					case Keywords.BitwiseAnd:
					case Keywords.BitwiseOr:
					case Keywords.BitwiseXor:
					case Keywords.ShiftLeft:
					case Keywords.ShiftRight:
						expression = AppendToBinaryExpression(lexer, expression, ComparisonExpression);
						break;
					default:
						return expression;
				}
			}
			return expression;
		}

		/*
				Left : expression Operator : ( "=" | "<>" | "<" | ">" | "<=" | ">=" | "?=" ) Right : expression
		*/
		public Expression ComparisonExpression(Lexer lexer)
		{
			var expression = AdditiveExpression(lexer);

			while (lexer[1].Type == TokenType.Symbol)
			{
				switch (lexer[1].Token)
				{
					case Keywords.Equal:
					case Keywords.NotEqual:
					case Keywords.Less:
					case Keywords.Greater:
					case Keywords.InclusiveLess:
					case Keywords.InclusiveGreater:
					case Keywords.Compare:
						expression = AppendToBinaryExpression(lexer, expression, AdditiveExpression);
						break;
					default:
						return expression;
				}
			}
			return expression;
		}

		/*
				Left : expression Operator : ( "+" | "-" ) Right : expression
		*/
		public Expression AdditiveExpression(Lexer lexer)
		{
			var expression = MultiplicativeExpression(lexer);

			while (lexer[1].Type == TokenType.Symbol)
			{
				switch (lexer[1].Token)
				{
					case Keywords.Addition:
					case Keywords.Subtract:
						expression = AppendToBinaryExpression(lexer, expression, MultiplicativeExpression);
						break;
					default:
						return expression;
				}
			}
			return expression;
		}

		/*
				Left : expression Operator : ( "*" | "/" | "%" ) Right : expression
		*/
		public Expression MultiplicativeExpression(Lexer lexer)
		{
			var expression = IntervalSelector(lexer);

			while (lexer[1].Type == TokenType.Symbol)
			{
				switch (lexer[1].Token)
				{
					case Keywords.Multiply:
					case Keywords.Divide:
					case Keywords.Modulo:
						expression = AppendToBinaryExpression(lexer, expression, IntervalSelector);
						break;
					default:
						return expression;
				}
			}
			return expression;
		}

		/*
			Begin : Expression ".." End : Expression
		*/
		public Expression IntervalSelector(Lexer lexer)
		{
			var expression = ExponentExpression(lexer);

			while (lexer[1].IsSymbol(Keywords.IntervalValue))
			{
				lexer.NextToken();
				var result = new IntervalSelector();
				result.SetPosition(lexer);
				result.Begin = expression;
				result.End = ExponentExpression(lexer);
				expression = result;
			}
			return expression;
		}

		/*
			Left : expression "**" Right : expression
		*/
		public Expression ExponentExpression(Lexer lexer)
		{
			var expression = CallExpression(lexer);

			while (lexer[1].IsSymbol(Keywords.Power))
				expression = AppendToBinaryExpression(lexer, expression, CallExpression);
			return expression;
		}

		/*
				Argument : expression 
				(
					( "->" Expression : expression [ "<" TypeArguments : typeDeclaration* ">" ] "(" Arguments : [ expression ]* ")" )
						| ( "=>" Expression : expression )
				)
		*/
		public Expression CallExpression(Lexer lexer)
		{
			var expression = UnaryExpression(lexer);

			while (lexer[1, false].IsSymbol(Keywords.Invoke) || lexer[1, false].IsSymbol(Keywords.Function))
			{
				if (lexer[1, false].IsSymbol(Keywords.Invoke))
				{
					lexer.NextToken();

					var result = new CallExpression();
					result.SetPosition(lexer);
					result.Arguments.Add(expression);
					result.Expression = Expression(lexer);

					if (lexer[1].IsSymbol(Keywords.Less))
					{
						lexer.NextToken();
						while (!lexer[1].IsSymbol(Keywords.Greater))
							result.TypeArguments.Add(TypeDeclaration(lexer));
						lexer.NextToken();
					}

					lexer.NextToken().CheckSymbol(Keywords.BeginGroup);

					while (!lexer[1].IsSymbol(Keywords.EndGroup))
						result.Arguments.Add(Expression(lexer));

					lexer.NextToken().CheckSymbol(Keywords.EndGroup);
					expression = result;
				}
				else
				{
					lexer.NextToken();
				
					var result = new CallExpression();
					result.SetPosition(lexer);
					result.Argument = expression;
					result.Expression = UnaryExpression(lexer);

					expression = result;
				}
			}
			return expression;
		}

		/*
				UnaryExpression : 
				(
					( Operator : ( "-" | "~" | "not" | "exists" ) Expression : expression )
						| ( Expression : expression Operator : ( "@@" | "++" | "--" ) )
				)
		*/
		public Expression UnaryExpression(Lexer lexer)
		{
			// Prefix operators
			if (lexer[1, false].Type == TokenType.Symbol)
				switch (lexer[1].Token)
				{
					case Keywords.Negate:
					case Keywords.BitwiseNot:
					case Keywords.Not:
					case Keywords.Exists:
					{
						lexer.NextToken();
						var result = new UnaryExpression();
						result.SetPosition(lexer);
						result.Operator = UnaryKeywordToOperator(lexer[0].Token);
						result.Expression = UnaryExpression(lexer);

						// If negation against a literal number, invert the value rather than add a negate operator
						if (result.Operator == Operator.Negate)
						{
							var literalExpression = result.Expression as LiteralExpression;
							if (literalExpression != null)
							{
								switch (literalExpression.Value.GetType().Name)
								{
									case "Double":
										literalExpression.Value = -(double)literalExpression.Value;
										return literalExpression;
									case "Integer":
										literalExpression.Value = -(int)literalExpression.Value;
										return literalExpression;
									case "Long":
										literalExpression.Value = -(long)literalExpression.Value;
										return literalExpression;
								}
							}
						}
						return result;
					}
				}

			var expression = DereferenceExpression(lexer);

			// Postfix operators
			while (lexer[1, false].Type == TokenType.Symbol)
			{
				switch (lexer[1].Token)
				{
					case Keywords.ExtractSingleton:
					case Keywords.Successor:
					case Keywords.Predicessor:
						lexer.NextToken();
						var result = new UnaryExpression();
						result.SetPosition(lexer);
						result.Operator = UnaryKeywordToOperator(lexer[0].Token);
						result.Expression = expression;
						expression = result;
						continue;
					default: break;
				}
				break;
			}

			return expression;
		}

		/*
				Left : expression Operator : ( "." | "@" | "," ) Right : expression
		*/
		public Expression DereferenceExpression(Lexer lexer)
		{
			var expression = RestrictExpression(lexer);

			while (lexer[1].Type == TokenType.Symbol)
			{
				switch (lexer[1].Token)
				{
					case Keywords.Dereference:
					case Keywords.Extract:
					case Keywords.Embed:
						expression = AppendToBinaryExpression(lexer, expression, RestrictExpression);
						break;
					default:
						return expression;
				}
			}
			return expression;
		}

		/*
				Expression : expression "?" "(" Condition : expression ")"
		*/
		public Expression RestrictExpression(Lexer lexer)
		{
			var expression = TermExpression(lexer);

			while (lexer[1].IsSymbol(Keywords.Restrict))
			{
				lexer.NextToken();
				var restrict = new RestrictExpression();
				restrict.SetPosition(lexer);
				restrict.Expression = expression;

				lexer.NextToken().CheckSymbol(Keywords.BeginGroup);

				restrict.Condition = Expression(lexer);

				lexer.NextToken().CheckSymbol(Keywords.EndGroup);

				expression = restrict;
			}
			return expression;
		}

		/*
			"(" Expression ")"
				| ListSelector
				| TupleSelector
				| SetSelector
				| FunctionSelector
				| IdentifierExpression
				| IntegerLiteral
				| DoubleLiteral
				| CharacterLiteral
				| StringLiteral
				| BooleanLiteral : ( "true" | "false" )
				| NullLiteral : "null"
				| VoidLiteral : "void"
				| CaseExpression
				| IfExpression
				| TryExpression
				| ClausedExpression
		*/
		public Expression TermExpression(Lexer lexer)
		{
			switch (lexer[1].Type)
			{
				case TokenType.Symbol:
					switch (lexer[1].Token)
					{
						case Keywords.BeginList: return ListSelector(lexer);

						case Keywords.BeginTupleSet: return SetOrTupleSelector(lexer);

						case Keywords.BeginGroup: return FunctionSelectorOrGroup(lexer);
						
						case Keywords.Case: return CaseExpression(lexer);
						
						case Keywords.If: return IfExpression(lexer);
						
						case Keywords.Try: return TryExpression(lexer);
						
						case Keywords.For:
						case Keywords.Let:
						case Keywords.Where:
						case Keywords.Order:
						case Keywords.Return: return ClausedExpression(lexer);

						case Keywords.Null:
						case Keywords.Void:
						case Keywords.True:
						case Keywords.False: return LiteralExpression(lexer);
						
						default: return IdentifierExpression(lexer);
					}
				case TokenType.Integer:
				case TokenType.Double:
				case TokenType.String:
				case TokenType.Char:
				case TokenType.Date:
				case TokenType.DateTime:
				case TokenType.Guid:
				case TokenType.Hex:
				case TokenType.Time:
				case TokenType.TimeSpan:
				case TokenType.Version: return LiteralExpression(lexer);

				default: throw new ParserException(ParserException.Codes.ExpressionExpected);
			}
		}

		/*
			"[" Items : [ Expression ]* "]"
		*/
		public Expression ListSelector(Lexer lexer)
		{
			lexer.NextToken().DebugCheckSymbol(Keywords.BeginList);

			var result = new ListSelector();
			result.SetPosition(lexer);
			
			while (!lexer[1].IsSymbol(Keywords.EndList))
			{
				result.Items.Add(Expression(lexer));
			}
			lexer.NextToken().CheckSymbol(Keywords.EndList);

			return result;
		}

		/*
			TupleSelector :=
				"{" ":" | Members : ( TupleAttributeSelector | TupleReference | TupleKey )* "}"

			TupleAttributeSelector :=
				Name : QualifiedIdentifier ":" Value : Expression
